// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preloader component does not render when the site is not loading 1`] = `
<Preloader
  classes={
    Object {
      "container": "Preloader-container-3",
      "spinner": "Preloader-spinner-1",
      "text": "Preloader-text-4",
      "wrapper": "Preloader-wrapper-2",
    }
  }
  loading={false}
/>
`;

exports[`Preloader component renders when the site is loading 1`] = `
<Preloader
  classes={
    Object {
      "container": "Preloader-container-3",
      "spinner": "Preloader-spinner-1",
      "text": "Preloader-text-4",
      "wrapper": "Preloader-wrapper-2",
    }
  }
  loading={true}
/>
`;
